--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.1",
     "isomorphic-fetch": "^3.0.0",
     "mongodb": "^4.2.2",
+    "node-cron": "^3.0.0",
     "node-html-parser": "^5.1.0"
   },
   "scripts": {
